force-app/main/default/objects/invenscan__c/invenscan__c.object-meta.xml
<CustomObject>
    <label>invenscan</label>
    <nameField>
        <label>Scan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>invenscans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>