force-app/main/default/objects/invenscan__c/fields/Antennaportnumber__c.field-meta.xml
<CustomField>
    <fullName>Antennaportnumber__c</fullName>
    <label>Antennaportnumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>