force-app/main/default/objects/invenscan__c/fields/EPC__c.field-meta.xml
<CustomField>
    <fullName>EPC__c</fullName>
    <externalId>true</externalId>
    <label>EPC</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>