force-app/main/default/objects/invenscan__c/fields/Readcount__c.field-meta.xml
<CustomField>
    <fullName>Readcount__c</fullName>
    <label>Readcount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>