force-app/main/default/objects/invenscan__c/fields/Readtime__c.field-meta.xml
<CustomField>
    <fullName>Readtime__c</fullName>
    <label>Readtime</label>
    <type>DateTime</type>
</CustomField>