force-app/main/default/objects/invenscan__c/fields/RSSI__c.field-meta.xml
<CustomField>
    <fullName>RSSI__c</fullName>
    <label>RSSI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>